# dollop

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pypi.yml  pytest.yml
docs/: conf.py  index.rst
dollop/: __init__.py  _utils.py  auto.py  file.py  numpy.py  pandas.py  sequence.py  torch.py
test/: test_auto.py  test_file.py  test_numpy.py  test_pandas.py  test_sequence.py  test_torch.py
