[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dollop"
version = "1.1.0"
description = ""
readme = "README.md"
authors = [
  { name = "Michael Peter Dunne" }
]
requires-python = ">=3.8"
dependencies = [
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[tool.setuptools.packages.find]
include = ["dollop", "dollop.*"]