[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dollop"
version = "1.2.0"
description = "A python package for splitting up iterables into smaller portions 🥣."
readme = "README.md"
authors = [
  { name = "Michael Peter Dunne" }
]
requires-python = ">=3.6"
dependencies = [
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/mpdunne/dollop"
Repository = "https://github.com/mpdunne/dollop"

[tool.setuptools.packages.find]
include = ["dollop", "dollop.*"]